Revision history for Lines-Containing

{{$NEXT}}

0.0.10  2022-07-23T21:22:17+02:00
    - Also re-export the "has-word" sub that is being used.

0.0.9  2022-07-19T15:35:06+02:00
    - Add support for :type<words|contains|starts-with|ends-with>
    - Add dependency on "has-word" to get fast word searching capability

0.0.8  2022-07-17T22:32:21+02:00
    - Rename :count to :count-only for more implicit documentation

0.0.7  2022-07-17T21:45:56+02:00
    - Add :count parameter to just produce count of matching lines

0.0.6  2022-06-26T16:21:50+02:00
    - Change the semantics of Callable as a needle.  Unchanged if
      the returned value is a Bool.  Always produce original line
      if Empty was returned.  Otherwise produce whatever was returned.

0.0.5  2022-06-24T19:20:19+02:00
    - Add :invert-match parameter to produce lines *NOT* matching

0.0.4  2022-06-23T11:30:04+02:00
    - Add :max-count parameter to limit number of matches.

0.0.3  2022-06-21T12:19:43+02:00
    - Make sure that lines uses the "utf8-c8" encoding to be more
      resilient to badly encoded text files.

0.0.2  2022-06-17T13:39:35+02:00
    - Fix issue with line numbers not getting incremented when found.

0.0.1  2022-06-16T23:21:36+02:00
    - Initial version.