@@ -6,7 +6,7 @@
   "build-depends": [
   ],
   "depends": [
-    "has-word:ver<0.0.3>:auth<zef:lizmat>"
+    "has-word:ver<0.0.6+>:auth<zef:lizmat>"
   ],
   "description": "look for lines containing a given needle",
   "license": "Artistic-2.0",
